--- a/aula15/ex017/estilo.css
+++ b/aula15/ex017/estilo.css
@@ -28,3 +28,15 @@ section {
 footer {
     font-style: italic;
 }
+
+#campos {
+    margin: 1.5em 0;
+}
+
+#numero {
+    width: 5em;
+}
+
+#tabuada {
+    width: auto;
+}
